refactor integration tests to use testbase class